docs/7.52/md/abencl_abap_corresponding.md
---
title: "Continue"
description: |
  CL_ABAP_CORRESPONDING - Simple Assignment(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corresponding_1.htm) CL_ABAP_CORRESPONDING - Assignment of Values(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corresponding_3.htm) CL_ABAP_CORRESPOND
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corresponding.htm"
abapFile: "abencl_abap_corresponding.htm"
keywords: ["do", "if", "method", "class", "data", "internal-table", "abencl", "abap", "corresponding"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_working.htm) →  [Assignments](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenvalue_assignments.htm) →  [Assigning Structure Components](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding.htm) → 

CL\_ABAP\_CORRESPONDING - System Class

The system class CL\_ABAP\_CORRESPONDING enables assignments of components between structures or between internal tables with dynamically specified mapping rules. Methods are available for simple assignments, assignments of default values, and for using a lookup table.

-   [CL\_ABAP\_CORRESPONDING - Simple Assignment](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corresponding_1.htm)

-   [CL\_ABAP\_CORRESPONDING - Assignment of Default Values](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corresponding_3.htm)

-   [CL\_ABAP\_CORRESPONDING - Lookup Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corresponding_2.htm)

Continue
[CL\_ABAP\_CORRESPONDING - Simple Assignment](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corresponding_1.htm)
[CL\_ABAP\_CORRESPONDING - Assignment of Values](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corresponding_3.htm)
[CL\_ABAP\_CORRESPONDING - Lookup Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corresponding_2.htm)