docs/7.57/md/abencl_abap_corresponding.md
---
title: "Continue"
description: |
  CL_ABAP_CORRESPONDING, Simple Assignment(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corresponding_1.htm) CL_ABAP_CORRESPONDING, Assignment of Values(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corresponding_3.htm) CL_ABAP_CORRESPONDIN
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corresponding.htm"
abapFile: "abencl_abap_corresponding.htm"
keywords: ["do", "if", "method", "class", "data", "internal-table", "abencl", "abap", "corresponding"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) →  [Assignments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenvalue_assignments.htm) →  [Assigning Structure Components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: CL_ABAP_CORRESPONDING, System Class, ABENCL_ABAP_CORRESPONDING, 757%0D%0A%0D%0AError:
%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

CL\_ABAP\_CORRESPONDING, System Class

The system class CL\_ABAP\_CORRESPONDING enables assignments of components between structures or between internal tables with dynamically specified mapping rules. Methods are available for simple assignments, assignments of default values, and for using a lookup table.

-   [CL\_ABAP\_CORRESPONDING - Simple Assignment](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corresponding_1.htm)
-   [CL\_ABAP\_CORRESPONDING - Assignment of Default Values](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corresponding_3.htm)
-   [CL\_ABAP\_CORRESPONDING - Lookup Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corresponding_2.htm)

Continue
[CL\_ABAP\_CORRESPONDING, Simple Assignment](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corresponding_1.htm)
[CL\_ABAP\_CORRESPONDING, Assignment of Values](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corresponding_3.htm)
[CL\_ABAP\_CORRESPONDING, Lookup Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corresponding_2.htm)